# wgpu-profiler

./: Cargo.toml
examples/: demo.rs  shader.wgsl
src/: lib.rs  scope.rs  tracy.rs
